--- a/sunline/goods/templates/goods/product.html
+++ b/sunline/goods/templates/goods/product.html
@@ -2,60 +2,8 @@
 {% load static %}
 
 {% block product_content %}
-<section>
-    <div class="container">
-    <!-- Контент -->
-    <div class="container">
-        <div class="row mt-1">
-            <div class="col-lg-2">
-                <!-- Пустой блок на усмотрение -->
-            </div>
-            <div class="col-lg-10">
-                <!-- Контент на странице -->
-                <div class="container mt-5">
-                    <div class="card mb-4 custom-shadow">
-                        <div class="row">
-                            <!-- Миниатюры -->
-                            <div class="col-md-4">
-                                <img src=" {{product.image.url}}"
-                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                            </div>
-                            <div class="col-md-4 ">
-                                <p class="product_id mt-3">id: {{product.display_id}} </p>
-                            </div>
-                            <!-- Увеличить изображение в модальном окне -->
-                            <div class="modal fade" id="imageModal1" tabindex="-1"
-                                aria-labelledby="imageModal1Label" aria-hidden="true">
-                                <div class="modal-dialog modal-lg">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="imageModal1Label"> {{product.name}} </h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Закрыть"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <img src=" {{product.image.url}} "
-                                                class="img-fluid" alt="Изображение 1">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Описание товара -->
-                        <div class="card-body">
-                            <p class="card-text">Цена: <strong>{{product.sell_price}} $</strong></p>
-                            <h5 class="card-title"> {{product.name}} </h5>
-                            <p class="card-text"> {{product.description}} </p>
-                            <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
-{% comment %} <section class="top">
+<section class="top">
     <div class="top__container" style="background-image: url('./images/top-bg.png');">
         <div class="container">
             <h2 class="top__title title">Product</h2>
@@ -98,37 +46,42 @@
                 </div>
                 <div class="product-one__content">
                     <h2 class="product-one__title">
-                        Emboosed Packet Backpack
+                        {{product.name}}
                     </h2>
                     <div class="product-one__box">
                         <div class="product-one__price">
-                            <div class="product-one__price-new">$19.00</div>
-                            <div class="product-one__price-old">(29.00)</div>
-                        </div>
-                        <div class="product-one__item-star">
-                            <div class="star" data-rateyo-rating="4"></div>
-                            <span>(22)</span>
+                            <div class="product-one__price-new">{{product.sell_price}}</div>
+                            {% comment %} <div class="product-one__price-old">(29.00)</div> {% endcomment %}
                         </div>
                     </div>
                     <p class="product-one__item-text">
                         <span>Review:</span>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
-                        et provident assumenda ea aut ab beatae illo eum facere est corrupti
-                        doloremque eveniet optio, vero facilis dolorum dolorem hic repellendus!
+                        {{product.description}}
                     </p>
-                </div>
-            </div>
-        </div>
-        <div class="product-tabs">
-            <div class="product-tabs__top">
-                <a class="product-tabs__top-item" href="#tab-1">Description</a>
-                <a class="product-tabs__top-item" href="#tab-2">Additional information</a>
-                <a class="product-tabs__top-item product-tabs__top-item--active" href="#tab-3">Reviews</a>
-            </div>
-            <div class="product-tabs__content">
-                <div class="product-tabs__content-item" id="tab-1">1</div>
-                <div class="product-tabs__content-item" id="tab-2">2</div>
-                <div class="product-tabs__content-item product-tabs__content-item--active" id="tab-3">
+                    <form class="product-one__item-form product-filter" action="#">
+                    <div class="product-one__item-info product-info">
+                        <ul class="product-info__list">
+                            <li class="product-info__item">
+                                <div class="product-info__title">
+                                    SKU
+                                </div>
+                                <div class="product-info__text">
+                                    {{product.id}}
+                                </div>
+                            </li>
+                            <li class="product-info__item">
+                                <div class="product-info__title">
+                                    Categories
+                                </div>
+                                <div class="product-info__text">
+                                   {{product.category}}
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    {% comment %} <input class="product-one__item-num" type="number" value="1" min="1"> {% endcomment %}
+                    <button class="product-one__item-btn" type="submit">Add to cart</button>
+                </form>
             </div>
         </div>
     </div>
@@ -182,6 +135,59 @@
                 <div class="product-item__price">
                     <div class="product-item__new-price">$34.00</div>
                     <div class="product-item__old-price">$36.00</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% comment %} <section>
+    <div class="container">
+    <!-- Контент -->
+    <div class="container">
+        <div class="row mt-1">
+            <div class="col-lg-2">
+                <!-- Пустой блок на усмотрение -->
+            </div>
+            <div class="col-lg-10">
+                <!-- Контент на странице -->
+                <div class="container mt-5">
+                    <div class="card mb-4 custom-shadow">
+                        <div class="row">
+                            <!-- Миниатюры -->
+                            <div class="col-md-4">
+                                <img src=" {{product.image.url}}"
+                                    class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
+                            </div>
+                            <div class="col-md-4 ">
+                                <p class="product_id mt-3">id: {{product.display_id}} </p>
+                            </div>
+                            <!-- Увеличить изображение в модальном окне -->
+                            <div class="modal fade" id="imageModal1" tabindex="-1"
+                                aria-labelledby="imageModal1Label" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="imageModal1Label"> {{product.name}} </h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Закрыть"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src=" {{product.image.url}} "
+                                                class="img-fluid" alt="Изображение 1">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Описание товара -->
+                        <div class="card-body">
+                            <p class="card-text">Цена: <strong>{{product.sell_price}} $</strong></p>
+                            <h5 class="card-title"> {{product.name}} </h5>
+                            <p class="card-text"> {{product.description}} </p>
+                            <a href="#" class="btn btn-dark add-to-cart">Добавить в корзину</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
