--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -781,6 +781,54 @@ body {
 } */
 
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
+}
+
+.pagination__prev,
+.pagination__next {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: #000;
+}
+
+.pagination--disabled {
+  display: none;
+}
+
+.pagination__list {
+  display: flex;
+  padding: 0 35px;
+}
+
+.pagination__item {
+  padding: 0 15px;
+}
+
+
+.pagination__link {
+  border: 2px solid #ebebeb;
+  margin-right: 2px;
+  margin-left: 2px;
+  color: #bcbcbc;
+  width: 3.8em;
+  height: 3.2em;
+  font-weight: 700;
+  padding: 10px 15px;
+}
+
+.pagination__link--active {
+  color: #ff6f00;
+  border: 2px solid #ff6f00;
+}
+
+
+
+
+
 .add-to-cart {
   appearance: none;
   backface-visibility: hidden;
@@ -817,13 +865,25 @@ body {
 
 .top {}
 
-.top__container {}
+.top__container {
+  max-width: 1700px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+  padding: 120px 0 130px;
+  text-align: center;
+}
 
-.container {}
+.top__title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 65px;
+  color: #29282d;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
 
-.top__title {}
-
-.title {}
 
 .product-page {
   padding: 120px 0 0;
@@ -842,11 +902,6 @@ body {
 
 .product-slide {
   display: flex;
-}
-
-.slick-vertical .slick-slide {
-  height: 140px;
-  margin-bottom: 30px;
 }
 
 .product-slide__thumb {
@@ -871,11 +926,7 @@ body {
   width: 560px;
 }
 
-.product-slide__big-item img {
-  width: 560px;
-  height: 650px;
-  object-fit: cover;
-}
+.product-slide__big-item {}
 
 .product-one__content {
   width: 370px;
@@ -883,7 +934,7 @@ body {
 
 .product-one__title {
   margin-bottom: 20px;
-  /* color: $title; */
+  color: #29282d;
   font-size: 20px;
 }
 
@@ -899,7 +950,7 @@ body {
 }
 
 .product-one__price-new {
-  color: #000;
+  color: #29282d;
 }
 
 .product-one__price-old {
@@ -907,92 +958,42 @@ body {
   text-decoration: line-through;
 }
 
-.product-one__item-star {}
-
-.star {}
-
 .product-one__item-text {
   margin-bottom: 30px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 17px;
 }
 
-.product-one__item-text span {
-  display: block;
-  /* color: $title;
-  @extend %roboto-400; */
-  font-size: 18px;
-}
+.product-one__item-form {}
 
-.product-tabs {
-  padding-top: 110px;
-}
+.product-filter {}
 
-.product-tabs__top {
-  border-bottom: 1px solid #f0f0f0;
-  margin-bottom: 40px;
-  /* @extend %roboto-400; */
-  font-size: 22px;
-}
+.product-one__item-info {}
 
-.product-tabs__top-item {
-  display: inline-block;
-  margin-bottom: 10px;
-  gap: 55px;
-}
+.product-info {}
 
-.product-tabs__top-item--active {
-  /* color: $title; */
-  position: relative;
-}
+.product-info__list {}
 
-.product-tabs__top-item--active::before {
-  content: '';
-  position: absolute;
-  bottom: -11px;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 1px;
-  /* background-color: $accent; */
-}
-
-.product-tabs__content {}
-
-.product-tabs__content-item {
-  display: none;
-}
-
-.product-tabs__content-item--active {
-  display: block;
-}
-
-.comments {
-  margin-bottom: 40px;
+.product-info__item {
+  margin-bottom: 5px;
   display: flex;
 }
 
-.comments__img {
-  margin-right: 30px;
-  min-width: 71px;
-  height: 71px;
-  border-radius: 50%;
-  overflow: hidden;
-  object-fit: cover;
+.product-info__title {
+  min-width: 100px;
+  color: #29282d;
 }
 
-.comments__content {}
+.product-info__text {}
 
-.comments__content-top {
-  display: flex;
-  margin-bottom: 10px;
-}
+.product-one__item-num {}
 
-.comments__content-name {
-  /* color: $title; */
-  margin-right: 13px;
-  /* @extend %roboto-400; */
+.product-one__item-btn {
+  border: none;
+  cursor: pointer;
+  padding: 12px 26px;
+  text-transform: uppercase;
+  color: #000;
+  background-color: #ff6f00;
+  cursor: pointer;
 }
 
 .related {
@@ -1000,6 +1001,12 @@ body {
 }
 
 .related__title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 65px;
+  color: #29282d;
+  margin-bottom: 10px;
+  text-transform: uppercase;
   margin-bottom: 50px;
 }
 
@@ -1009,24 +1016,96 @@ body {
   grid-column-gap: 30px;
 }
 
-.product-item {}
+.product-item {
+  max-width: 370px;
+  text-align: center;
+}
 
 .product-item__img-box {
-  height: auto;
+  position: relative;
+  height: 370px;
+  overflow: hidden;
+  margin-bottom: 25px;
 }
 
 .product-item__images {}
 
 .product-item__title {
-  padding: 5px 0;
+  color: #29282d;
+    padding: 15px 0 20px;
 }
 
-.product-item__price {}
+.product-item__price {
+  display: flex;
+  justify-content: center;
+}
 
-.product-item__new-price {}
+.product-item__new-price {
+  padding: 0 12px;
+  color: #29282d;
+}
 
-.product-item__old-price {}
+.product-item__old-price {
+  padding: 0 12px;
+  text-decoration: line-through;
+}
 
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.product-slide .slick-vertical .slick-slide {
+  height: 140px;
+  margin-bottom: 30px;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-track:before,
+.slick-track:after {
+  content: "";
+  display: table;
+}
 
 
 /*============= страниа контакты ================*/
@@ -1266,8 +1345,7 @@ body {
   gap: 30px;
 }
 
-.works__item {
-}
+.works__item {}
 
 .works__item-img {
   max-width: 660px;
