--- a/sunline/main/templates/main/index.html
+++ b/sunline/main/templates/main/index.html
@@ -123,36 +123,36 @@
             <a class="collection__item" href="#">
               <img class="collection__images" src="{% static 'deps/images/goods/bedside table.jpg' %} " alt="" />
               <div class="collection__info">
-                <h6 class="collection__info-title">Truffaut literally trust</h6>
-                <p class="collection__info-text">Living room furntiture | Chair</p>
+                <h6 class="collection__info-title">Awesome New Chair</h6>
+                <p class="collection__info-price">$ 199</p>
               </div>
             </a>
             <a class="collection__item" href="#">
               <img class="collection__images" src="{% static 'deps/images/goods/bedside table.jpg' %} " alt="" />
               <div class="collection__info">
-                <h6 class="collection__info-title">Truffaut literally trust</h6>
-                <p class="collection__info-text">Living room furntiture | Chair</p>
+                <h6 class="collection__info-title">Awesome New Chair</h6>
+                <p class="collection__info-price">$ 199</p>
               </div>
             </a>
             <a class="collection__item" href="#">
               <img class="collection__images" src="{% static 'deps/images/goods/bedside table.jpg' %} " alt="" />
               <div class="collection__info">
-                <h6 class="collection__info-title">Truffaut literally trust</h6>
-                <p class="collection__info-text">Living room furntiture | Chair</p>
+                <h6 class="collection__info-title">Awesome New Chair</h6>
+                <p class="collection__info-price">$ 199</p>
               </div>
             </a>
             <a class="collection__item" href="#">
               <img class="collection__images" src="{% static 'deps/images/goods/bedside table.jpg' %} " alt="" />
               <div class="collection__info">
-                <h6 class="collection__info-title">Truffaut literally trust</h6>
-                <p class="collection__info-text">Living room furntiture | Chair</p>
+                <h6 class="collection__info-title">Awesome New Chair</h6>
+                <p class="collection__info-price">$ 199</p>
               </div>
             </a>
             <a class="collection__item" href="#">
               <img class="collection__images" src="{% static 'deps/images/goods/bedside table.jpg' %} " alt="" />
               <div class="collection__info">
-                <h6 class="collection__info-title">Truffaut literally trust</h6>
-                <p class="collection__info-text">Living room furntiture | Chair</p>
+                <h6 class="collection__info-title">Awesome New Chair</h6>
+                <p class="collection__info-price">$ 199</p>
               </div>
             </a>
           </div>
