--- a/sunline/main/templates/main/base.html
+++ b/sunline/main/templates/main/base.html
@@ -51,9 +51,9 @@
                             </ul>
                         </nav>
                         <div class="user-actions">
-                            <form class="form" role="search">
-                                <input class="form__input" type="search" placeholder="Search" aria-label="Search">
-                                <button class="form__input-btn" type="submit">
+                            <form class="form" role="search" action=" {% url "catalog:search" %} " method="get">
+                                <input class="form__input" role="search" type="search" placeholder="Search"  aria-label="Search" name="q" >
+                                <button class="form__input-btn"  type="submit">
                                     <img src="{% static "deps/icons/search.svg" %} " alt="">
                                 </button>
                             </form>
