added login form and controller

--- a/sunline/goods/templates/goods/catalog.html
+++ b/sunline/goods/templates/goods/catalog.html
@@ -1,8 +1,8 @@
-{% extends 'main/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% load goods_tags %}
 
-{% block catalog_content %}
+{% block block__content %}
   <section class="shop">
     <div class="container">
       <div class="shop__inner">
