--- a/sunline/goods/templates/goods/product.html
+++ b/sunline/goods/templates/goods/product.html
@@ -1,7 +1,7 @@
-{% extends "main/base.html" %}
+{% extends 'base.html' %}
 {% load static %}
 
-{% block product_content %}
+{% block block__content %}
 
 <section class="top">
     <div class="top__container" style="background-image: url('./images/top-bg.png');">
