--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -67,6 +67,22 @@ body {
   font-family: 'Manrope', sans-serif;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+
+.title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 65px;
+  color: #29282d;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -74,11 +90,6 @@ body {
   height: 56px;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
 
 .header__inner {
   padding-top: 15px;
@@ -206,9 +217,6 @@ body {
 }
 
 .top-slider {
-  /* background-image: url(../images/slider/slider-bg.png);
-  background-repeat: no-repeat;
-  background-size: cover; */
   background-color: #f6f6f6;
   padding-top: 65px;
   margin-bottom: 60px;
@@ -217,8 +225,6 @@ body {
 .top-slider__container {
   max-width: 1560px;
 }
-
-.top-slider__inner {}
 
 .top-slider__item {
   display: flex !important;
@@ -534,14 +540,14 @@ body {
   padding: 0 10px;
 }
 
-.new-collection__title {
+/* .new-collection__title {
   color: #363838;
   font-size: 35px;
   line-height: 51px;
   padding-bottom: 25px;
   margin-bottom: 25px;
   position: relative;
-}
+} */
 
 .new-collection__text {
   max-width: 730px;
@@ -650,14 +656,14 @@ body {
   padding: 80px 0 90px;
 }
 
-.gallery__title {
+/* .gallery__title {
   color: #363838;
   font-size: 35px;
   line-height: 51px;
   padding-bottom: 25px;
   margin-bottom: 25px;
   position: relative;
-}
+} */
 
 .container-fluid {
   max-width: 1920px;
@@ -688,8 +694,6 @@ body {
   color: #363838;
 }
 
-.gallery__inner {}
-
 .gallery__items {
   display: none;
   grid-template-columns: repeat(4, 1fr);
@@ -706,6 +710,243 @@ body {
   grid-column: span 2;
   grid-row: span 2;
 }
+
+.video-fashion {
+  background-color: #f6f6f6;
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding: 125px 0;
+  margin-bottom: 80px;
+}
+
+.video-fashion__inner {
+  display: flex;
+}
+
+.video-fashion__popup {
+  margin-right: 60px;
+  max-width: 530px;
+  width: 100%;
+  height: 480px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.video-fashion__play {}
+
+.video-fashion__content {
+  max-width: 570px;
+}
+
+.video-fashion__subtitle {
+  padding-top: 75px;
+  font-size: 22px;
+  color: #ff6f00;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+
+.video-fashion__title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 65px;
+  color: #29282d;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.video-fashion__text {
+  margin-bottom: 55px;
+}
+
+.video-fashion__link {
+  padding: 12px 26px;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #ff6f00;
+  cursor: pointer;
+}
+
+.trendig {
+  margin-bottom: 100px;
+}
+
+/* .trending__title {
+  color: #363838;
+  font-size: 35px;
+  line-height: 51px;
+  margin-bottom: 25px;
+  position: relative;
+  text-align: center;
+} */
+
+.trending__subtitle {
+  max-width: 570px;
+  margin: 0 auto 30px;
+}
+
+.trending__items {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+
+.video {
+  margin-bottom: 120px;
+}
+
+.video__inner {}
+
+.video__overlay {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; */
+}
+
+.video__bg {
+  width: 100%;
+  max-height: 550px;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  /* position: relative; */
+}
+
+.video__bg::before {}
+
+.video__content {
+  content: '';
+  left: 0;
+  right: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.video__title {
+  font-family: 'Manrope', sans-serif;
+  font-size: 120px;
+  line-height: 125px;
+  font-weight: 700;
+  color: #FFFFFF30;
+  letter-spacing: 0.2em;
+  /* color: #000; */
+  z-index: 5;
+}
+
+.blog {
+  margin-bottom: 120px;
+}
+
+/* .blog__title {
+  color: #363838;
+  font-size: 35px;
+  line-height: 51px;
+  margin-bottom: 25px;
+  position: relative;
+  text-align: center;
+} */
+
+.blog__text {
+  max-width: 570px;
+  margin: 0 auto 30px;
+}
+
+.blog__items {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.blog__item {
+  max-width: 370px;
+  border: 1px solid #ececec;
+}
+
+.blog__item:hover:hover {
+  box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+  border: none;
+}
+
+.blog__item:hover:hover .blog__item-link {
+  color: #ff6f00;
+}
+
+.blog__item-imglink img {
+  height: 288px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.blog__item-box {
+  padding: 30px 40px;
+}
+
+.blog-box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.blog-box__author {
+  padding-left: 30px;
+  position: relative;
+  color: #8d8d8d;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.blog-box__date {
+  padding-left: 30px;
+  position: relative;
+  color: #8d8d8d;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.blog-box__author::before {
+  background-image: url(../icons/blog-user.svg);
+}
+
+.blog-box__date::before {
+  background-image: url(../icons/blog-time.svg);
+}
+
+.blog-box__author::before,
+.blog-box__date::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 0;
+  top: 4px;
+}
+
+.blog__item-titlelink,
+.blog__item-link {
+  color: #8d8d8d;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.blog__item-title {
+  color: #29282d;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
 
 /* ==============страница с каталогом================ */
 
@@ -822,11 +1063,6 @@ body {
   padding: 0 12px;
   text-decoration: line-through;
 }
-
-/* .product-item__content-box {
-  display: none;
-} */
-
 
 .pagination {
   display: flex;
@@ -1400,4 +1636,42 @@ body {
   color: #848484;
   margin-bottom: 20px;
   max-width: 480px;
+}
+
+
+.team {
+  margin-bottom: 120px;
+}
+
+.team__items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.team__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team__item-img img{
+  height: 288px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.team__item-job {
+  color: #000;
+  font-size: 21px;
+  line-height: 22px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.team__item-name {
+  color: #848484;
+  font-size: 28px;
+  line-height: 21px;
+  font-weight: 400;
 }
