--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -115,7 +115,7 @@ body {
 }
 
 .menu__list-link:hover {
-  color: #ff6f00;
+  color: #eb7025;
 }
 
 .menu__list-link--active {
@@ -192,7 +192,7 @@ body {
 }
 
 .form__input-btn {
-  background: #ff6f00;
+  background: #000;
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 8px;
   text-transform: uppercase;
@@ -253,7 +253,7 @@ body {
   padding: 14px 36px;
   text-transform: uppercase;
   color: #fff;
-  background-color: #ff6f00;
+  background-color: #eb7025;
   cursor: pointer;
 }
 
@@ -292,7 +292,7 @@ body {
 
 
 .top-slider .slick-dots li.slick-active button {
-  border-color: #ff6f00;
+  border-color: #eb7025;
 }
 
 .top-slider .slick-dots li button::before {
@@ -308,7 +308,7 @@ body {
 }
 
 .top-slider .slick-dots li.slick-active button::before {
-  background-color: #ff6f00;
+  background-color: #eb7025;
 }
 
 .top-slider .slick-dots li button {
@@ -375,7 +375,7 @@ body {
   padding: 6px 10px 6px 18px;
   border-radius: 21px;
   background-color: transparent;
-  border: 1px solid #ff6f00;
+  border: 1px solid #000;
   width: 100%;
 }
 
@@ -396,7 +396,7 @@ body {
   min-width: 160px;
   margin-left: 9px;
   cursor: pointer;
-  background-color: #ff6f00;
+  background-color: #000;
 }
 
 .footer__social {
@@ -539,15 +539,6 @@ body {
   margin: 0 auto;
   padding: 0 10px;
 }
-
-/* .new-collection__title {
-  color: #363838;
-  font-size: 35px;
-  line-height: 51px;
-  padding-bottom: 25px;
-  margin-bottom: 25px;
-  position: relative;
-} */
 
 .new-collection__text {
   max-width: 730px;
